# 1fit

./: README.md  admin.py  auth.py  features.py  main.py  menus.py  pyproject.toml  requirements.txt  storage.py  superuser.py  translation.py  user.py  users.json  utils.py
data/: clubs.json  payments.json  users.json
